--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -315,6 +315,8 @@
         <!-- DEMO Button -->
         <androidx.cardview.widget.CardView
             android:id="@+id/btnDemo"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
             android:layout_width="120dp"
             android:layout_height="120dp"
             app:cardBackgroundColor="#2A2A2A"
@@ -349,7 +351,7 @@
         <!-- ARDUINO Button -->
         <androidx.cardview.widget.CardView
             android:id="@+id/btnArduino"
-            android:layout_width="120dp"
+            android:layout_width="55dp"
             android:layout_height="120dp"
             app:cardBackgroundColor="#2A2A2A"
             app:cardCornerRadius="12dp"
@@ -383,7 +385,7 @@
         <!-- ACCEL Button -->
         <androidx.cardview.widget.CardView
             android:id="@+id/btnAccel"
-            android:layout_width="120dp"
+            android:layout_width="55dp"
             android:layout_height="120dp"
             app:cardBackgroundColor="#2A2A2A"
             app:cardCornerRadius="12dp"
